--- a/spellBook/src/views/admin/editForm.ejs
+++ b/spellBook/src/views/admin/editForm.ejs
@@ -1,188 +1,128 @@
 <!DOCTYPE html>
 <html lang="es">
-    <!-- HEAD -->
-    <%- include('../partials/head') %>
-<body class="edit-body relative">
-   
-  <div class="star star1"></div>
-  <div class="star star2"></div>
-  <div class="star star3"></div>
-  <div class="star star4"></div>
-  <div class="star star5"></div>
-  <div class="star star6"></div>
-  <div class="star star7"></div>
-  <div class="star star8"></div>
-  <!-- HEADER -->
- <header class="edit-header">
+<!-- HEAD -->
+<%- include('../partials/head') %>
 
-  <div class="star star1"></div>
-  <div class="star star2"></div>
-  <div class="star star3"></div>
-  <div class="star star4"></div>
-  <div class="star star5"></div>
-  <div class="star star6"></div>
-  <div class="star star7"></div>
-  <div class="star star8"></div>
-
-  <!-- LOGO CON LINK AL HOME -->
-  <div class="edit-logo">
-    <h1 class="logo__title"><a href="/" class="logo__link">SpellBook</a></h1>
-</div >
-  <!-- BURGER MENU -->
-<a href="/admin/addProduct">
-  <div class="edit-btn ">
-    <i class="far fa-user" id="icon"></i>
-  </div>
-</a>
-  </header>  
-  <!-- EDIT FORM -->
-
-  <main class="">    
-    
-    <section class="conteiner-main">
-      <div class="conteiner-user-data">
-        <div class="add-btn">
-          <h2 id="shop-form" class="info-user"><%= idBook.titulo %></h2>
-        </div>
-
-        <form method="POST" action="/admin/editProduct/<%= idBook.id %>?_method=PUT" enctype="multipart/form-data" id="product">
-          <fieldset>
-            <label for="image">Imagen:</label>
-            <input type="file" name="imagen" id="image" />
-          </fieldset>
-          <fieldset class="user-data">
-            <label for="title">Título:</label>
-            <div>
-              <input
-              type="text"
-              name="titulo"
-              id="titulo"
-              value="<%= idBook.title %> "
-            />
-            <p id="titulo-error" class="warning"></p>
-            </div>     
-          </fieldset>
-          
-          <fieldset class="user-data">
-            <label for="autor">Autor:</label>
-            <select name="autor" id="autor" class="select-fcm border-fcm" >
-              <% authors.forEach(author => { %>
-                  <option value="<%= author.id %>" ><%= author.name %></option>
-              <% }); %>
-          </select>
-          </fieldset>
-          <fieldset class="user-data">
-            <label for="amount">Stock:</label>
-            <div>
-              <input
-              type="number"
-              name="cantidad"
-              id="amount"
-              value="<%= idBook.stock %>"
-            />
-            <p id="cantidad-error" class="warning"></p>
-            </div>            
-          </fieldset>
-          
-          <fieldset class="user-data">
-            <label for="precio">Precio:</label>
-            <div>
-              <input
-              type="number"
-              id="precio"
-              name="precio"
-              value="<%= idBook.price %>"
-          />
-          <p id="precio-error" class="warning"></p>
-            </div>
-            
-          </fieldset>
-          
-          <fieldset class="user-data">
-            <label for="descripcion">Descripción:</label>
-            <div>
-              <input
-              type="textarea"
-              name="descripcion"
-              id="description"
-              value="<%= idBook.description %>"              
-            />
-            <p id="description-error" class="warning"></p>
-            </div>
-            
-          </fieldset>
-          
-          <fieldset>
-            <label for="recommended_age">Edad Recomendada:</label>
-                       
-            <select name="recommended_age" id="" class="select-fcm border-fcm">
-              <% recommended_age.forEach(age => { %>
-                  <option value="<%= age.id %>"><%= age.age %></option>
-              <% }); %>
-          </select>
-          </fieldset>
-          <fieldset>
-            <label for="publisher">Editorial:</label>
-            <div>
-              <input
-              type="text"
-              name="publisher"
-              id="publisher"           
-              value="<%= idBook.publisher%>"
-            />
-            <p id="publisher-error" class="warning"></p>
-            </div>
-            
-          </fieldset>
-          
-          <fieldset>
-            <label for="language">Idioma:</label>
-            <div>
-             <input
-              type="text"
-              name="language"
-              id="language"
-              value="<%= idBook.language %>"              
-            />
-            <p id="language-error" class="warning"></p>
-            </div>            
-          </fieldset>
-         
-          <fieldset>
-            <label for="publication_year">Año de Publicación:</label>
-            
-            <div>
-              <input
-              type="number"
-              name="publication_year"
-              id="publication_year"              
-              value="<%= idBook.publication_year %>"
-            />
-            <p id="publication_year-error" class="warning"></p>
-            </div>
-          </fieldset>
-         
-          <fieldset>
-            <label for="pages">Nro de Páginas:</label>
-            <div>
-              <input
-              type="number"
-              name="pages"
-              id="pages"
-              value="<%= idBook.pages %>"              
-            />
-            <p id="pages-error" class="warning"></p>
-            </div>            
-          </fieldset>
-          
-          <fieldset>
-            <input class="delete" type="reset" value="Borrar">
-            <button class="display-shop" type="submit" > Guardar</button>
-          </fieldset>
-        </form>
+  <body>
+    <!-- HEADER -->
+    <header class="header error-bg relative">
+      <div class="star star1"></div>
+      <div class="star star2"></div>
+      <div class="star star3"></div>
+      <div class="star star4"></div>
+      <div class="star star5"></div>
+      <div class="star star6"></div>
+      <div class="star star7"></div>
+      <div class="star star8"></div>
+      <!-- LOGO CON LINK AL HOME -->
+      <div class="logo">
+        <h1 class="logo__title"><a href="/" class="logo__link">SpellBook</a></h1>
       </div>
-    </section>
-    <script src="/js/editForm.js"></script>
-  </main>
-</body>
+    </header>
+
+    <body>
+      <form method="POST" action="/admin/editProduct/<%= idBook.id %>?_method=PUT"
+        enctype="multipart/form-data" id="product">
+      <main class="edit-container">
+
+        <section class="edit-conteiner-main">
+          <div class="conteiner-user-data form-product-admin">
+            <div class="cont-image-edit">
+              <h2 id="shop-form" class="info-user">
+                <%= idBook.title %>
+              </h2>
+              <img src="/images/Libros/<%= idBook.image %> " alt="" class="edit-form-image">
+            </div>
+              <label for="image">Imagen:</label>
+              <div>
+                <input type="file" name="imagen" id="image" />
+                <p id="image-error" class="warning"></p>
+              </div>
+              <label for="titulo">Título:</label>
+              <div>
+                <input type="text" name="titulo" id="titulo" value="<%= idBook.title %> " />
+                <p id="titulo-error" class="warning"></p>
+              </div>
+
+              <label for="autor">Autor:</label>
+              <select name="autor" id="autor" class="select-fcm border-fcm">
+                <% authors.forEach(author=> { %>
+                  <option value="<%= author.id %>">
+                    <%= author.name %>
+                  </option>
+                  <% }); %>
+              </select>
+
+              <label for="amount">Stock:</label>
+              <div>
+                <input type="number" name="cantidad" id="amount" value="<%= idBook.stock %>" />
+                <p id="cantidad-error" class="warning"></p>
+              </div>
+          </div>
+        </section>
+        <section class="edit-conteiner-main">
+          <div class="conteiner-user-data ">
+            <section class="form-product-admin">
+              <label for="precio">Precio:</label>
+              <div>
+                <input type="number" id="precio" name="precio" value="<%= idBook.price %>" />
+                <p id="precio-error" class="warning"></p>
+              </div>
+
+              <label for="descripcion">Descripción:</label>
+              <div>
+                <input type="textarea" name="descripcion" id="description" value="<%= idBook.description %>" />
+                <p id="description-error" class="warning"></p>
+              </div>
+
+              <label for="recommended_age">Edad Recomendada:</label>
+
+              <select name="recommended_age" id="" class="select-fcm border-fcm">
+                <% recommended_age.forEach(age=> { %>
+                  <option value="<%= age.id %>">
+                    <%= age.age %>
+                  </option>
+                  <% }); %>
+              </select>
+
+              <label for="publisher">Editorial:</label>
+              <div>
+                <input type="text" name="publisher" id="publisher" value="<%= idBook.publisher%>" />
+                <p id="publisher-error" class="warning"></p>
+              </div>
+              <label for="language">Idioma:</label>
+              <div>
+                <input type="text" name="language" id="language" value="<%= idBook.language %>" />
+                <p id="language-error" class="warning"></p>
+              </div>
+              <label for="publication_year">Año de Publicación:</label>
+
+              <div>
+                <input type="number" name="publication_year" id="publication_year"
+                  value="<%= idBook.publication_year %>" />
+                <p id="publication_year-error" class="warning"></p>
+              </div>
+              <label for="pages">Nro de Páginas:</label>
+              <div>
+                <input type="number" name="pages" id="pages" value="<%= idBook.pages %>" />
+                <p id="pages-error" class="warning"></p>
+              </div>          
+              
+            </section>
+          </div>
+        </section>
+      </main>
+      <div class="edit-submit">
+       
+        <button class=" button edit-button-submit button__send" id="cancel-edit" type="reset">Cancelar</button>
+        <button class=" button edit-button-submit" type="submit"> Guardar</button>
+      </div>              
+      <p id="submit-error" class="warning"></p>
+    </form>
+      <!-- FOOTER -->
+      <%- include('../partials/footer') %>
+        <!-- LINK DEL JS DE EDIT FORM -->
+        <script src="/js/editForm.js"></script>
+    </body>
+
 </html>
