--- a/spellBook/src/views/admin/editUser.ejs
+++ b/spellBook/src/views/admin/editUser.ejs
@@ -1,108 +1,120 @@
 <!DOCTYPE html>
 <html lang="es">
-    <!-- HEAD -->
-    <%- include('../partials/head') %>
-<body>
-  <!-- HEADER -->
- <header class="header error-bg relative">
-  <div class="star star1"></div>
-  <div class="star star2"></div>
-  <div class="star star3"></div>
-  <div class="star star4"></div>
-  <div class="star star5"></div>
-  <div class="star star6"></div>
-  <div class="star star7"></div>
-  <div class="star star8"></div>
-  <!-- LOGO CON LINK AL HOME -->
-  <div class="logo">
-      <h1 class="logo__title"><a href="/" class="logo__link">SpellBook</a></h1>      
-  </div>  
-  </header>
+<!-- HEAD -->
+<%- include('../partials/head') %>
+
   <body>
-    <main class="conteiner-main">
-     
+    <!-- HEADER -->
+    <header class="header error-bg relative">
+      <div class="star star1"></div>
+      <div class="star star2"></div>
+      <div class="star star3"></div>
+      <div class="star star4"></div>
+      <div class="star star5"></div>
+      <div class="star star6"></div>
+      <div class="star star7"></div>
+      <div class="star star8"></div>
+      <!-- LOGO CON LINK AL HOME -->
+      <div class="logo">
+        <h1 class="logo__title"><a href="/" class="logo__link">SpellBook</a></h1>
+      </div>
+    </header>
+
+    <body>
+      <main class="conteiner-main">
+
         <!-- FORMULARIO DE REGISTRO -->
-        <form action="/admin/users/<%= user.id %>?_method=PUT" method="POST"  enctype="multipart/form-data" id="editUser">
-    
+        <form action="/admin/users/<%= user.id %>?_method=PUT" method="POST" enctype="multipart/form-data"
+          id="editUser">
+
           <!-- IMAGEN DE USUARIO, BARITA -->
-          <section class="register-user">    
+          <section class="register-user">
             <div class="user-image">
-              <img  class= "user-image-item"src="/images/Imagenes de perfil/<%= user.avatar %>"  alt="">
-            </div>    
+              <img class="user-image-item" src="/images/Imagenes de perfil/<%= user.avatar %>" alt="">
+            </div>
           </section>
-          <div class="conteiner-info-user">    
+          <div class="conteiner-info-user">
             <!-- EMAIL -->
             <div class="info-user">
               <i class="fas fa-envelope user-data-icon"></i>
-              <p><%= user.email %></p>
+              <p>
+                <%= user.email %>
+              </p>
             </div>
           </div>
-    
-     
           <!-- TÍTULO DE SECCIÓN -->
           <h2 class="title-seccion">Datos Personales</h2>
-          
-          
           <!-- CAMPOS A LLENAR -->
           <section class="conteiner-user-data">
             <!-- NOMBRE -->
             <p class="user-data">
               <label for="name">
-                  <img class="user-data-icon user-pocision" height="40px" src="/images/recursos/wizard-icon.png" alt="img de mago">
+                <img class="user-data-icon user-pocision" height="40px" src="/images/recursos/wizard-icon.png"
+                  alt="img de mago">
               </label>
-              <input class = "user-date-inputs" placeholder="Nombre" type="text" name="name" id="name" value="<%= user.name %>">
-              </p>
-              <!-- APELLIDO -->
-              <p class="confirmation">
-                <input class = "user-date-inputs " placeholder="Apellido" type="text" name="firstName" id="firstName" value="<%= user.last_name %>">
-              </p>
-    
-             <!-- LUGAR -->
-            <p class="user-data">    
-            <label for="location">
-                <i class="fas fa-globe-americas user-data-icon world-pocision"></i>
-            </label>
-            <input class = "user-date-inputs" placeholder="País de Residencia" type="text" name="location" id="location" value="<%= user.country %>">
+              <input class="user-date-inputs" placeholder="Nombre" type="text" name="name" id="name"
+                value="<%= user.name %>">
             </p>
-    
-             <!-- NACIMIENTO -->
+            <!-- APELLIDO -->
+            <p class="user-data-firstname">
+              <input class="user-date-inputs " placeholder="Apellido" type="text" name="firstName" id="firstName"
+                value="<%= user.last_name %>">
+            </p>
+
+            <!-- LUGAR -->
+            <p class="user-data">
+              <label for="location">
+                <i class="fas fa-globe-americas user-data-icon world-pocision"></i>
+              </label>
+              <input class="user-date-inputs" placeholder="País de Residencia" type="text" name="location" id="location"
+                value="<%= user.country %>">
+            </p>
+
+            <!-- NACIMIENTO -->
             <p class="user-data ">
               <label for="date">
-                <i class="far fa-calendar user-data-icon "><img class="image-icon" height="18px" src="/images/recursos/wizard-icon.png" alt="img de mago"></i>
+                <i class="far fa-calendar user-data-icon "><img class="image-icon" height="18px"
+                    src="/images/recursos/wizard-icon.png" alt="img de mago"></i>
               </label>
-              <input class ="user-date-inputs-date date-pocision" type="date" name="date" id="date" value="">
+              <input class="user-date-inputs-date date-pocision" type="date" name="date" id="date" value="">
             </p>
-    
+
             <!-- AVATAR -->
             <p class="user-data ">
               <label for="avatar" class="cont-flex-column">
-                <img class="user-data-icon user-pocision" height="25px" src="/images/recursos/wizard-icon.png" alt="img de mago">
-               <spam class=''> Avatar </spam>
+                <img class="user-data-icon user-pocision" height="25px" src="/images/recursos/wizard-icon.png"
+                  alt="img de mago">
+                <spam class=''> Avatar </spam>
               </label>
-              <input class ="user-date-inputs-date " type="file" name="avatar" id="avatar" value="<%= user.avatar %> ">
+              <input class="user-date-inputs-date " type="file" name="avatar" id="avatar" value="<%= user.avatar %> ">
             </p>
 
             <!-- ROL -->
             <p class="user-data ">
-                <label for="rol" class="rol-user">
-                 <spam class=''> ROL </spam>
-                </label>
-                <select name="rol" id="rol" class="user-date-inputs-date text-center">
-                  <option value="user">user</option>
-                  <option value="admin">admin</option>
-                </select>
-              </p>   
-          
-            <!-- BOTON PARA DE GUARDAR -->
-            <button type="submit" class="btn-save button">GUARDAR</button>
+              <label for="rol" class="rol-user">
+                <spam class=''> ROL </spam>
+              </label>
+              <select name="rol" id="rol" class="user-date-inputs-date text-center">
+                <option value="user">user</option>
+                <option value="admin">admin</option>
+              </select>
+            </p>
           </section>
+
+          <!-- BOTON PARA DE GUARDAR -->
+          <div class="user-submit-container">
+            <button type="submit" class="btn-save button">GUARDAR</button>
+          </div>
+
+
         </form>
       </main>
-    
+
       <!-- FOOTER -->
       <%- include('../partials/footer') %>
-      
-      <!-- LINK DEL JS DEL HEADER -->
-      <script src="/js/header.js"></script>
-  </body>
-  </html>
+
+        <!-- LINK DEL JS DEL HEADER -->
+        <script src="/js/header.js"></script>
+    </body>
+
+</html>
