se cambia lgica de obtencion de books para mejor performance y se ancla la secion de recomendado a la latura justa

--- a/spellBook/src/views/partials/header.ejs
+++ b/spellBook/src/views/partials/header.ejs
@@ -23,7 +23,7 @@
     <nav class="menu">
       <a href="/" class="menu__link">Inicio</a>
       <a href="/product" class="menu__link">Libros</a>
-      <a href="/novelties" class="menu__link">Recomendados</a>
+      <a href="/novelties#recomended" class="menu__link">Recomendados</a>
       <a href="/novelties" class="menu__link">Novedades</a>
       <a href="/aboutUs" class="menu__link">Nosotros</a> 
     </nav>
