--- a/spellBook/src/views/products/novelties.ejs
+++ b/spellBook/src/views/products/novelties.ejs
@@ -35,7 +35,7 @@
       </div>
   
   <% } else { %>
-    <div class="nov-product">
+    <div class="nov-product" >
       <div class="nov-description">
         <p class="nov-text">      
           <% let descriptionLow = book.description.slice(0 , 250) %>
@@ -55,10 +55,18 @@
   <% }) %>
   
 </seccion>
-<seccion class="conteiner-main">
+<div id="recomended"></div>
+<br><br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<seccion class="conteiner-main" >
   <div class="headline">
     <img class="varita"src="/images/Recursos/varita.png" alt=" imágen de varita mágica">
-    <h1>Recomendados</h1>
+    <h1 >Recomendados</h1>
     <hr class="bg-blue">
   </div>
 
