se terminan validaciones del front y modifica msj de credenciales invalidas del back en el ligin

--- a/spellBook/src/views/users/login.ejs
+++ b/spellBook/src/views/users/login.ejs
@@ -21,7 +21,7 @@
           alt=""
           class="logo-sticker__img">
       </figure>
-      <form action="/user/login" method="POST" class="form">
+      <form action="/user/login" method="POST" class="form" id="form">
         <div class="box">
           <h2 class="box__title">Iniciar sesion</h2>
         </div>
