--- a/spellBook/src/views/users/profile.ejs
+++ b/spellBook/src/views/users/profile.ejs
@@ -8,7 +8,7 @@
     <%- include('../partials/header') %>
 
     <!-- COMIENZA EL REGITRO DE USUARIO -->
-
+    
     <main class="conteiner-main">
       <!-- FORMULARIO DE REGISTRO -->
       <form
@@ -151,6 +151,7 @@
           
       </form>
     </main>
+    
       <h2 class="title-seccion">Tus ultimas Compras</h2>
 
       <!-- LINEA HR -->
@@ -160,7 +161,10 @@
         <p class="now-buy">No haz realizado ninguna compra aún</p>
         <a href="#"><p class="now-buy">Empieza ahora</p></a>
       </section>
-  
+
+      <form action="http://localhost:3030/admin/deleteUser/<%=user.id%>?_method=DELETE" id="delete-user" method="POST">
+        <button class="button" type="submit">Eliminar mi cuenta</button>
+      </form>
 
     <!-- FOOTER -->
     <%- include('../partials/footer') %>
