se crea archivo para logica del Cart y archivos para tener ventanas modales para los confirm, alert y promp

--- a/spellBook/public/stylesheets/styles.css
+++ b/spellBook/public/stylesheets/styles.css
@@ -11,6 +11,7 @@
 @import url('novelties.css');
 @import url('aboutUs.css');
 @import url('books.css');
+@import url('jmgmodal.css');
 
 /* ESTILOS   GENERALES */
 .flex-between {
