--- a/spellBook/src/views/index.ejs
+++ b/spellBook/src/views/index.ejs
@@ -119,7 +119,7 @@
         </div>
           <!-- Botón de comprar -->
         <div>
-          <input class="button" type="button" value="Comprar">
+          <button class="button" type="button" value="<%= book.id %> " id="buy-button">Comprar</button>
         </div>
       </div>
       </article>
@@ -152,7 +152,7 @@
         </div>
           <!-- Botón de comprar -->
         <div>
-          <input class="button" type="button" value="Comprar">
+          <button class="button" type="button" value="<%= book %> " id="buy-button">Comprar</button>
         </div>
       </div>
       </article>
@@ -182,5 +182,6 @@
 
   <!-- LINK DEL JS DEL HEADER -->
   <script src="js/header.js"></script>
-       
+  <!-- LINK DEL JS DEL CART -->
+  <script src="js/cart.js"></script>
 </body>
