se arregla que cuenado se envia el form vacio te señale los campos vascios antes de enviar

--- a/spellBook/src/views/users/login.ejs
+++ b/spellBook/src/views/users/login.ejs
@@ -63,6 +63,7 @@
           </label>
         </div>
         <button type="submit" value="Enviar" class="btn__send button">Iniciar sesion</button>
+        <span class="warning" id="formError"></span>
         <div class="user">
           <a href="" class="enlace_link">¿Olvidaste tu contraseña?</a>
           <a href="/user/signup" class="enlace_link"  >¿No tenés cuenta?</a>
