--- a/spellBook/src/views/users/signUp.ejs
+++ b/spellBook/src/views/users/signUp.ejs
@@ -71,9 +71,9 @@
           <span class="warning"><%= errors.terminos.msg %> </span>
         <% } %>
        
-
+        <span class="warning" id="formError"></span>
         <button type="submit" class="btn__send button">Registrate</button>
-
+        
         
 
         <div class="user">
