--- a/spellBook/src/views/admin/editForm.ejs
+++ b/spellBook/src/views/admin/editForm.ejs
@@ -115,9 +115,9 @@
       <div class="edit-submit">
        
         <button class=" button edit-button-submit button__send" id="cancel-edit" type="reset"  onclick="jmgModal('miventana',{
-          title: 'Vas vas cancelar',
+          title: 'Cancelar',
           width: 400,
-          height: 20,
+          height: 80,
           content: 'Si cancelas no se guardaran los cambios'},
           ['Aceptar',function(){
             `${window.location.href = '/admin/addProduct'}`            
